--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2>Grupo "E" PLL 2-2-2 </h2>
                         <h2>Presenta:</h2>
                     <h1>Inteligencia Interpersonal</h1>
-                    <p>Si pusiste atención, intenta resolverme, ¡ahora!.</p> 
+                    <p>Si pusiste atención, intenta resolverme, ¡ahora!</p> 
                     <p>¡Suerte! :)</p>
                     <button id="start">¡Comencemos!</button>
                 </div>
