--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     </div>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=2.0">
         <link rel="stylesheet" href="./assets/css/style.css">
         <title>Inteligencia Interpersonal</title>
     </head>
 
-<div class="caja">                 
+<div class="caja2">                 
 
     <body>
         <header>
